--- a/mario.html
+++ b/mario.html
@@ -8,6 +8,9 @@
 </head>
 <body>
 <canvas id="can"></canvas>
+<script src="const.js"></script>
+<script src="map.js"></script>
+<script src="oji.js"></script>
 <script src="main.js"></script>
 </body>
 </html>
