--- a/mario.html
+++ b/mario.html
@@ -10,6 +10,7 @@
 <canvas id="can"></canvas>
 <script src="const.js"></script>
 <script src="map.js"></script>
+<script src="item.js"></script>
 <script src="block.js"></script>
 <script src="oji.js"></script>
 <script src="main.js"></script>
